<resources>
    <string name="app_name">Grocery Merchant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to Registeration Page -->
    <string name="shop_home">Home Page</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_city">City</string>
    <string name="shop_area">Area</string>
    <string name="shop_address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email Id</string>
    <string name="password">4 Digit PIN</string>
    <string name="confirm_password">Confirm PIN</string>
    <string name="action_add_image">Upload Shop Image</string>
    <string name="action_register">Register</string>

    <!-- Strings related to Login Page-->
    <string name="login_pin">Enter 4 digit PIN</string>
    <string name="action_login">Login</string>
    <string name="label_btn_find">Find</string>

    <string name="activity_add_product_title">Add Product</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_test">ERP</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>


</resources>
