<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="myapp.com.groceryshopmerchant.ProfileSettingActivity">

    <ScrollView
        android:id="@+id/profile_registration_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/imageborder">

                <ImageView
                    android:id="@+id/profile_img_edt_shop_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bag"
                    android:padding="20dp"
                    tools:layout_editor_absoluteX="10dp"
                    tools:layout_editor_absoluteY="16dp" />
            </LinearLayout>
            <!--  <TextView
                  android:id="@+id/profile_tv_edt_shopname"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="right"
                  android:text="@string/fa_edit"
                  android:textSize="35dp" />
  -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/profile_edt_shop_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Shop Name"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/shop_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits=" 0123456789AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZzÁáÂâÃãÀàÇçÉéÊêÍíÓóÔôÕõÚú"
                    android:hint="@string/shop_city"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/shop_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shop_area"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/shop_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shop_address"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/mob_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/profile_edt_shop_open_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Shop Open Time"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profile_edt_shop_close_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter Shop Close Time"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/profile_upload_shopdetails_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <CheckBox
                    android:id="@+id/profile_checkBox_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Provides Home Delivery" />

                <LinearLayout
                    android:id="@+id/profile_linearlayout_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/profile_edt_home_delivery_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits=" 0123456789AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz"
                            android:hint="Add delivery time"
                            android:inputType="text"
                            android:maxLines="1"

                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ex.In hours or in days" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />

                <CheckBox
                    android:id="@+id/profile_checkBox_charges"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Home Delivery Charges" />

                <LinearLayout
                    android:id="@+id/profile_linearlayout_charges"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/profile_edt_home_delivery_charges"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits=" 0123456789AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz"
                            android:hint="Set minimum ammount for home delivery"
                            android:inputType="text"
                            android:maxLines="1"

                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ex.Above 500 ₹ shopping" />

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />


            </LinearLayout>


            <Button
                android:id="@+id/profile_btn_save"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background"

                android:text="Save"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
        <!--  <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <android.support.design.widget.TextInputLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

                  <EditText
                      android:id="@+id/edt_shop_open_time"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:digits=" 0123456789AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz"
                      android:hint="Set minimum ammmount for home delivery"
                      android:inputType="text"
                      android:maxLines="1"

                      android:singleLine="true" />
              </android.support.design.widget.TextInputLayout>



          </LinearLayout>-->
    </ScrollView>


</LinearLayout>